<resources>
    <string name="app_name">Eddy</string>
    <string name="connection_failed">Connection: ✘</string>
    <string name="connection_succeeded">Connection: ✔</string>
    <string name="stop_start">Measure:</string>
    <string name="mosquitto_url">Mosquitto:</string>
    <string name="default_ip">31.209.145.132</string>
    <!-- <string name="default_ip">130.208.171.79</string> -->
    <string name="session">Session:</string>
    <string name="date_and_time">Date and time:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="gps_accuracy">GPS Accuracy:</string>
    <string name="z_acceleration">Z Acceleration:</string>
    <string name="z_filtered">Z Filtered:</string>
    <string name="backlog_files_0">Backlog files: 0</string>
    <string name="std">RMS:</string>
    <string name="edr">EDR: 0.000000</string>
    <string name="send">Send:</string>
</resources>